<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:stretchColumns="*" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
<<<<<<< HEAD
        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "ID"/>
        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id="@+id/id"
            android:layout_span = "3"/>
        <Button
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text ="checkValid"
            android:id="@+id/valid"
            />
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "PW"/>
        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content" />
=======

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id" />

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="none" />

        <Button
            android:id="@+id/valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkvalid" />
>>>>>>> a450caae1bc423f10a32daf162dfc56f0c98f2da
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
<<<<<<< HEAD
        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"

            android:text = "Name"/>
        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
=======

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pw" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
>>>>>>> a450caae1bc423f10a32daf162dfc56f0c98f2da
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="textPersonName" />
    </TableRow>

<<<<<<< HEAD
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "Phone"/>
        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
=======
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
>>>>>>> a450caae1bc423f10a32daf162dfc56f0c98f2da
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:digits="0123456789"
            android:inputType="phone" />
    </TableRow>

    <TableRow>

        <Button
<<<<<<< HEAD
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            style="@style/btnStyleBeige"
            android:id="@+id/confirm"
            android:text="Confirm"
            android:layout_span = "4"/>
    </TableRow>


=======
            android:id="@+id/confirm"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:text="@string/confirm" />
    </TableRow>
>>>>>>> a450caae1bc423f10a32daf162dfc56f0c98f2da

</TableLayout>